crates/php-parser/tests/snapshots/trait_adaptation_tests__trait_visibility_change_to_public.snap
---
source: tests/trait_adaptation_tests.rs
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Class {
            attributes: [],
            modifiers: [],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 12,
                    end: 19,
                },
            },
            extends: None,
            implements: [],
            members: [
                TraitUse {
                    attributes: [],
                    traits: [
                        Name {
                            parts: [
                                Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 30,
                                        end: 37,
                                    },
                                },
                            ],
                            span: Span {
                                start: 30,
                                end: 37,
                            },
                        },
                    ],
                    adaptations: [
                        Alias {
                            method: TraitMethodRef {
                                trait_name: None,
                                method: Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 48,
                                        end: 61,
                                    },
                                },
                                span: Span {
                                    start: 48,
                                    end: 61,
                                },
                            },
                            alias: None,
                            visibility: Some(
                                Token {
                                    kind: Public,
                                    span: Span {
                                        start: 65,
                                        end: 71,
                                    },
                                },
                            ),
                            span: Span {
                                start: 48,
                                end: 72,
                            },
                        },
                    ],
                    doc_comment: None,
                    span: Span {
                        start: 26,
                        end: 80,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 6,
                end: 80,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 80,
    },
}
